--- a/transactions/pom.xml
+++ b/transactions/pom.xml
@@ -62,9 +62,13 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>1.2.1</version>
+            <version>3.10.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.10.6</version>
+        </dependency>
         <!--redis数据库-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
