--- a/transactions/src/main/resources/application-dev.yml
+++ b/transactions/src/main/resources/application-dev.yml
@@ -29,7 +29,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
 #    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/tms?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/tms?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
     initialSize: 1
